js/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  selector:
    matchLabels:
      app: frontend-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-service
        mylabel: hi
    spec:
      containers:
        - name: randomquotes
          image: octopussamples/octopub-frontend:0.1.204
          volumeMounts:
            - name: config-volume
              mountPath: /workspace/build/config.json
              subPath: config.json
          ports:
            - name: web
              containerPort: 7080
          resources:
            limits:
              memory: 512Mi
              cpu: 128m
            requests:
              memory: 256Mi
              cpu: 128m
      volumes:
        - name: config-volume
          configMap:
            name: webconfig
