js/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /[a-zA-Z0-9-.]+\.(html|css|js|png|jpg|jpeg|gif|map|txt)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
